# CommunityCode-AppiumCodeExamples

./: .dockerignore  .env.example  .gitignore  CONTAINER_TESTING.md  Container_Test_Environment_Prompt.md  Dockerfile  Env Var Migration.md  Env_Var_Migration.md  QUICK_TESTS.md  README.md  build.gradle  docker-compose.yml  env  settings.gradle
architecture/: ACCESSIBILITY_TESTS_PLAN.md  Accessibility_Tests_Prompt.md  Appium_Samples_InaBox_Architecture.pptx  CONTAINERIZED_TESTING_GUIDE.md  CONTAINER_TESTING_GUIDE.md  Container_Test_Environment_Prompt.md  PERFORMANCE_TESTING_MIGRATION.md  README.md  SELF_HEALING_MIGRATION_PLAN.md  TODO.md  architecture_diagram.py  create_powerpoint.py
java/: build.gradle  performance_trx_quickstart.xml  testng.xml  testng_quickstart.xml
java/src/test/java/quickStartTests/: AndroidQuickStartTest.java  IOSQuickStartTest.java
java/src/test/java/utils/: AccessibilityResultsUtil.java  ApplicationUploadUtil.java  EnvironmentConfig.java
java/src/test/resources/: performance_transactions.xml
java/src/test/resources/accessibility/: accessibility_tests.xml
java/src/test/resources/appium-self-healing/: regular_tests.xml  self_healing_tests.xml
python/: conftest.py  pyproject.toml
python/tests/: __init__.py
python/tests/quick_start_tests/: test_android_quick_start.py  test_ios_quick_start.py
scripts/: run_e2e_performance_tests.sh  run_tests.py
src/test/java/quickStartTests/: AndroidQuickStartTest.java  IOSQuickStartTest.java
tutorial/: Getting_Started_with_Digital_Testing.md  tutorial_prompt.md
(+98 files in other folders)
